forEach + bs & fix css spacings

--- a/src/components/Match/Overview/Timeline.css
+++ b/src/components/Match/Overview/Timeline.css
@@ -2,7 +2,7 @@
 
 .timeline {
   width: 100%;
-  margin: 30px 0 5px 0;
+  margin: 30px 0 7px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -29,6 +29,11 @@
 
 .battle {
   width: 100%;
+  margin: 0 5px;
+  
+  @media only screen and (max-width: 768px) {
+    margin: 0;
+  }
 }
 
 .line {
@@ -189,7 +194,7 @@
 }
 
 .matchNumbers {
-  text-align: right;
+  text-align: center;
   margin: 0 5px;
   
   & > div {
